# breakout

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md
Resources/script/: demo.wren  main.wren
Resources/shaders/: particle.frag  particle.vs
Resources/shaders/core/: elementrender.fs  elementrender.vs  triangle.fs  triangle.vs
Resources/shaders/es/: elementrender.fs  elementrender.vs  sprite.fs  sprite.vs  triangle.fs  triangle.vs
docs/: index.data  index.html  index.js  index.wasm  manifest.json
libs/corefw/: CMakeLists.txt
libs/corefx/: CMakeLists.txt  arrayrenderer.c  arrayrenderer.h  elementrenderer.c  elementrenderer.h  game.c  game.h  resourcemanager.c  resourcemanager.h  shader.c  shader.h  texture2d.c  texture2d.h
libs/wren/: CMakeLists.txt
libs/wren/include/: wren.h
src/: BallObject.c  BallObject.h  Breakout.h  Collision.c  Collision.h  Demo.c  Demo.h  GameLevel.c  GameLevel.h  GameObject.c  GameObject.h  Particle.c  Particle.h  ParticleGenerator.c  ParticleGenerator.h  Registry.c  Registry.h  Wren.c  Wren.h  main.c  serviceworker.js  template copy.html  template.html
src/stuff/: CMakeLists.txt  main.c
